--- a/KINO/KINO/Content/Site.css
+++ b/KINO/KINO/Content/Site.css
@@ -9,6 +9,8 @@ body {
     padding-top: 50px;
     /*padding-bottom: 20px;*/
     font-family: "NEXTART", Arial;
+    background: #161a23;
+    color: #fff;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -71,4 +73,56 @@ footer>p{
 }
 footer .container{
     max-width: 768px;
+}
+
+
+
+/*
+    Слайдшоу
+*/
+.slideshow-main{
+    width: 100%;
+    position: relative;
+}
+.slide {
+    width: 100%;
+    height: 500px;
+}
+.slide h3, 
+.slide p{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+.slide h3{
+    font-size: 45px;
+    top: 30%;
+}
+.slide p{
+    font-size: 14px;
+    top: 50%;
+}
+.slide .slide-image{
+     position: absolute;
+     left: 0;
+     top: 0;
+     width: 100%;
+     height: 100%;
+     background-position: center;
+     background-repeat: no-repeat;
+     background-size: cover;
+ }
+.slideshow-main .slide-arrow-left,
+.slideshow-main .slide-arrow-right {
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    font-size: 48px;
+    cursor: pointer;
+}
+.slideshow-main .slide-arrow-left {
+    left: 0;
+}
+.slideshow-main .slide-arrow-right {
+    right: 0;
 }
