--- a/KINO/KINO/Views/Shared/_Layout.cshtml
+++ b/KINO/KINO/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link rel="stylesheet" href="/fonts/font-awesome/css/font-awesome.min.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title – приложение ASP.NET</title>
@@ -9,7 +10,8 @@
         @Scripts.Render("~/bundles/modernizr")
             @Scripts.Render("~/bundles/jquery")
                 @Scripts.Render("~/bundles/bootstrap")
-                @Scripts.Render("~/Scripts/site.js")
+                    @Scripts.Render("~/Scripts/site.js")
+                    @Scripts.Render("~/Scripts/slideshow.js")
 
 </head>
 <body>
@@ -36,7 +38,6 @@
     </div>
     <div class="container body-content">
                 @RenderBody()
-        <div style="min-height:1000px;"></div>
         <hr />
         <footer>
             <div class="container">
