--- a/KINO/KINO/Views/Home/Contact.cshtml
+++ b/KINO/KINO/Views/Home/Contact.cshtml
@@ -1,17 +1,14 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Контактная информация";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<div class="col-lg-6">
+    <strong>Димон:</strong><p>номер телефона</p><br/>
+    <strong>Леха:</strong><p>номер телефона</p><br />
+</div>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div class="col-lg-6">
+    <iframe src="https://yandex.ru/map-widget/v1/-/CBUcUCeAsD" width="500" height="400" frameborder="0"></iframe>
+</div>
