--- a/KINO/KINO/Views/Home/Halls.cshtml
+++ b/KINO/KINO/Views/Home/Halls.cshtml
@@ -5,23 +5,26 @@
 }
 
 <h2>Наши залы</h2>
-<div class="slideshow-main">
-    <div class="slide-arrow-left">
+<div id="slideshow">
+    <div class="slide-arrow-left" onclick="SlideDown();">
         <i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
     </div>
     @foreach (KINO.Models.Hall hall in ViewBag.Halls)
     {
         <div class="slide">
             @{
-                string url = "http://localhost:50293/Content/Images/Halls/" + hall.Image;
-                <div class="slide-image" background-image=@url ></div>
+                string url = "/Content/Images/Halls/" + hall.Image;
+                <div class="slide-image" style="background-image:url(@url)" ></div>
                 string s = hall.SeatsNumber.ToString() + " мест";
-                <h3>@hall.Name</h3>
-                <p>@s</p>
+                <div class="slide-title-cover">
+                    <h3>@hall.Name</h3>
+                    <p>@s</p>
+                </div>
+                
             }
         </div>
     }
-    <div class="slide-arrow-right">
+    <div class="slide-arrow-right" onclick="SlideUp();">
         <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
     </div>
 </div>
