--- a/KINO/KINO/Views/Shared/_Layout.cshtml
+++ b/KINO/KINO/Views/Shared/_Layout.cshtml
@@ -23,12 +23,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Имя приложения", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                 @Html.ActionLink(" ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Главная", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Афиша", "About", "Home")</li>
+                    <li>@Html.ActionLink("Афиша", "Affiche", "Home")</li>
                     <li>@Html.ActionLink("Залы", "Halls", "Home")</li>
                     <li>@Html.ActionLink("Контакты", "Contact", "Home")</li>
                 </ul>
@@ -38,15 +38,15 @@
     </div>
     <div class="container body-content">
                 @RenderBody()
-        <hr />
         <footer>
+            <hr />
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4">
                         <a>Meню</a>
                         <ul class="">
                             <li>@Html.ActionLink("Главная", "Index", "Home")</li>
-                            <li>@Html.ActionLink("Афиша", "About", "Home")</li>
+                            <li>@Html.ActionLink("Афиша", "Affiche", "Home")</li>
                             <li>@Html.ActionLink("Залы", "Halls", "Home")</li>
                             <li>@Html.ActionLink("Контакты", "Contact", "Home")</li>
                         </ul>
@@ -55,7 +55,7 @@
                         <a>Контакты</a>
                     </div>
                     <div class="col-sm-4">
-                        @Html.ActionLink("Имя приложения", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                        @Html.ActionLink(" ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                     </div>
                 </div>
             </div>
