--- a/KINO/KINO/Content/Site.css
+++ b/KINO/KINO/Content/Site.css
@@ -5,18 +5,28 @@
     font-style: normal;
 }
 
+html{
+    min-height: 100%;
+}
 body {
     padding-top: 50px;
     /*padding-bottom: 20px;*/
     font-family: "NEXTART", Arial;
     background: #161a23;
     color: #fff;
+    min-height: 100vh;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    height: calc(100vh - 120px);
+}
+.content{
+    box-sizing: border-box;
+    min-height: 100%;
+    padding-bottom: 130px;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -53,12 +63,15 @@ textarea {
 }
 footer {
     background: #161a23;
-    min-height: 120px;
+    height: 120px;
+    margin-top: -120px;
     color: #fff !important;
+    /*
     position: absolute;
     left: 0;
     right: 0;
     bottom: 0;
+        */
 }
 footer li{
     display: block;
