--- a/KINO/KINO/Views/Home/Affiche.cshtml
+++ b/KINO/KINO/Views/Home/Affiche.cshtml
@@ -14,7 +14,7 @@
                 <div class="film-info">
                     @{
                         string filmName = string.Format("{0} ({1})", film.Name, film.ReleaseYear);
-                        <h3>@film.Name </h3><br/>
+                        @Html.ActionLink(filmName, "Film?link="+film.LINK, "Home")
                         <strong>Жанр: </strong><span>@film.Genre.Name</span><br />
                         <strong>Ограничение: </strong><span>@film.AgeLimit.Value</span><br />
                     }
