--- a/KINO/KINO/Content/Site.css
+++ b/KINO/KINO/Content/Site.css
@@ -173,4 +173,15 @@ footer .container{
 .film-info{
     float: left;
     margin-left: 40px;
+
+}
+.film-info a{
+    color: #fff;
+    text-decoration: none;
+}
+.film{
+    margin-bottom: 15px;
+    margin-top: 15px;
+    padding: 15px;
+    border: 2px solid white;
 }
