--- a/KINO/KINO/Views/Home/Affiche.cshtml
+++ b/KINO/KINO/Views/Home/Affiche.cshtml
@@ -1,20 +1,21 @@
 ﻿@{
     ViewBag.Title = "Афиша";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
 <div class="container">
     @foreach (KINO.Models.Film film in ViewBag.Films)
     {
-        <div class="row">
+        <div class="row film">
             @{
                 string url = "/Content/Images/Posters/" + film.Poster;
                 <div class="poster-image" style="background-image:url(@url)"></div>
                 <div class="film-info">
                     @{
                         string filmName = string.Format("{0} ({1})", film.Name, film.ReleaseYear);
-                        @Html.ActionLink(filmName, "Film?link="+film.LINK, "Home")
+                        string href = string.Format("/Home/Film?link={0}", film.LINK);
+                        <h3><a href="@href">@filmName</a></h3>
                         <strong>Жанр: </strong><span>@film.Genre.Name</span><br />
                         <strong>Ограничение: </strong><span>@film.AgeLimit.Value</span><br />
                     }
