Создана страница добавления фильмов

--- a/KINO/KINO/Views/Home/Contact.cshtml
+++ b/KINO/KINO/Views/Home/Contact.cshtml
@@ -5,8 +5,8 @@
 <h3>@ViewBag.Message</h3>
 
 <div class="col-lg-6">
-    <strong>Димон:</strong><p>номер телефона</p><br/>
-    <strong>Леха:</strong><p>номер телефона</p><br />
+    <strong>Димон:</strong><p>Здесь могла быть ваша реклама.</p><br/>
+    <strong>Леха:</strong><p>Здесь могла быть ваша реклама.</p><br />
 </div>
 
 <div class="col-lg-6">
