--- a/KINO/KINO/Views/Manage/Index.cshtml
+++ b/KINO/KINO/Views/Manage/Index.cshtml
@@ -12,7 +12,7 @@
         <h4>Управление контентом</h4>
         <hr />
         <!--<p>[@Html.ActionLink("Управление контентом", "ContentManage")]</p>-->
-        <p><a class="btn btn-default" href="/Manage/FilmContentManage">Управление контентом</a></p>
+        <p><a class="btn btn-default" href="/Manage/FilmManage">Управление контентом</a></p>
     </div>
 }
 <div>
