--- a/KINO/KINO/Content/Site.css
+++ b/KINO/KINO/Content/Site.css
@@ -191,3 +191,55 @@ footer .container{
     width: 395px;
     float:left;
 }
+.poster-image-large {
+    width: 100%;
+    height: 550px;
+    background-size: cover;
+}
+.session-button {
+    height: 50px;
+    width: auto;
+    background: #f6a21c;
+    color: #fff;
+    width: 200px;
+    border-radius: 50px;
+    text-align: center;
+}
+.session-link {
+    float: left;
+    margin-right: 20px;
+}
+.session-link:hover, 
+.session-link:visited {
+    text-decoration: none;
+    color: #fff;
+}
+
+
+.seat-set {
+    display: table;
+    border-spacing: 5px;
+}
+.seat-row{
+    display: table-row;
+}
+.seat {
+    display: table-cell;
+    width: 30px;
+    height: 40px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #fff;
+    background: #161a23;
+    border-radius: 5px;
+}
+.booked {
+    background: #b7b7b7 !important;
+}
+.seat:hover {
+    background: #f6a21c;
+}
+.active-seat {
+    background: #f6a21c;
+}
+
