--- a/KINO/KINO/Views/Manage/SessionManage.cshtml
+++ b/KINO/KINO/Views/Manage/SessionManage.cshtml
@@ -29,7 +29,13 @@
                     @Html.DropDownListFor(m => m.Session.HallLINK, ViewBag.Halls as SelectList, new { @class = "form-control" })
                 </div>
             </div>
-            
+            <div class="form-group">
+                @Html.LabelFor(m => m.Session.Cost, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    @Html.TextBoxFor(m => m.Session.Cost, new { @class = "form-control" })
+                </div>
+            </div>
+
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     @if (Model.Session == null)
