--- a/KINO/KINO/Views/Manage/Index.cshtml
+++ b/KINO/KINO/Views/Manage/Index.cshtml
@@ -6,15 +6,42 @@
 <h2>@ViewBag.Title.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
-@if (@HttpContext.Current.User.IsInRole("Admin"))
-{ 
-    <!--<div>
-        <h4>Управление контентом</h4>
+@if (@HttpContext.Current.User.IsInRole("User"))
+{
+    <div>
+        <h4>История заказов</h4>
         <hr />
-        <<p>[@Html.ActionLink("Управление контентом", "ContentManage")]</p>
-        <p><a class="btn btn-default" href="/Manage/FilmManage">Управление контентом</a></p>
-    </div>-->
+        @if (ViewBag.History != null)
+        {
+            <table class="table table-hover table-striped">
+                <thead>
+                    <tr>
+                        <th>Дата и время заказа</th>
+                        <th>Дата и время сеанса</th>
+                        <th>Название фильма</th>
+                        <th>Название зала</th>
+                        <th>Стоимость заказа</th>
+                        <th>Количество билетов</th>
+                    </tr>
+                </thead>
+                @foreach (KINO.Models.UserOrdersHistory history in ViewBag.History)
+                {
+                    <tr>
+                        @foreach (var prop in history.GetType().GetProperties())
+                        {
+                            <td>@prop.GetValue(history)</td>
+                        }
+                    </tr>
+                }
+            </table>
+        }
+        else
+        {
+            <p>Здесь будет отображаться история ваших заказов.</p>
+        }
+    </div>
 }
+
 <div>
     <h4>Изменение параметров учетной записи</h4>
     <hr />
@@ -32,7 +59,7 @@
             }
             ]
         </dd>
-        <dt>Внешние имена входа:</dt>
+        @*<dt>Внешние имена входа:</dt>
         <dd>
             @Model.Logins.Count [
             @Html.ActionLink("Управление", "ManageLogins") ]
@@ -45,33 +72,33 @@
              
              Uncomment the following block after you have set up two-factor authentication
         *@
-        @*  
-            <dt>Номер телефона:</dt>
-            <dd>
-                @(Model.PhoneNumber ?? "None")
-                @if (Model.PhoneNumber != null)
-                {
-                    <br />
+          
+        <dt>Номер телефона:</dt>
+        <dd>
+            @(Model.PhoneNumber ?? "Не указан")
+            @if (Model.PhoneNumber != null)
+            {
+                <br />
                     <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
-                    using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                    {
-                        @Html.AntiForgeryToken()
-                        <text>[<input type="submit" value="Remove" class="btn-link" />]</text>
-                    }
-                }
-                else
+                using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
+                    @Html.AntiForgeryToken()
+                    <text>[<input type="submit" value="Remove" class="btn-link" />]</text>
                 }
-            </dd>
-        *@
-        <dt>Двухфакторная проверка подлинности:</dt>
+            }
+            else
+            {
+                <text>[&nbsp;&nbsp;@Html.ActionLink("Добавить", "AddPhoneNumber")&nbsp;&nbsp;]</text>
+            }
+        </dd>
+        
+        @*<dt>Двухфакторная проверка подлинности:</dt>
         <dd>
             <p>
                 There are no two-factor authentication providers configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
                 for details on setting up this ASP.NET application to support two-factor authentication.
             </p>
-            @*@if (Model.TwoFactor)
+            @if (Model.TwoFactor)
                 {
                     using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                     {
@@ -90,7 +117,7 @@
                         <input type="submit" value="Включить" class="btn btn-link" />
                         </text>
                     }
-                }*@
-        </dd>
+                }
+        </dd>*@
     </dl>
 </div>
