смена логина и мыла, исправлены баги

--- a/KINO/KINO/Views/Home/Affiche.cshtml
+++ b/KINO/KINO/Views/Home/Affiche.cshtml
@@ -33,8 +33,8 @@
                             string hrefEdit = string.Format("/Manage/FilmManage?id={0}", film.LINK);
                             string hrefDelete = string.Format("/Manage/DeleteFilm?id={0}", film.LINK);
                             <div class="col-md-2">
-                                <p><a class="btn btn-default" href="@hrefEdit">Редактировать фильм</a></p>
-                                <p><a class="btn btn-default" href="@hrefDelete">Удалить фильм</a></p>
+                                <p><a class="btn btn-default" style="margin-left:10px;" href="@hrefEdit">Редактировать фильм</a></p>
+                                <p><a class="btn btn-default" style="margin-left:10px;" href="@hrefDelete">Удалить фильм</a></p>
                             </div>
                         }
             }
