--- a/KINO/KINO/Views/Home/FeaturedFilms.cshtml
+++ b/KINO/KINO/Views/Home/FeaturedFilms.cshtml
@@ -10,8 +10,8 @@
                 <div class="col-lg-4" style="min-height: 380px;">
                     @{
                         string url = "/Content/Images/Posters/" + films[i].Poster;
-                        <div class="poster-image" style="background-image:url(@url); clear: both; position: absolute; left: 50%; transform: translate(-50%, 0);"></div>
-                        <h3 style="clear:both; color: #fff; position: absolute; top: 310px; text-align: center; width: 100%;">@films[i].Name</h3>
+                        <div class="poster-image" style="background-image:url(@url); clear: both; position: absolute; left: 50%; transform: translate(-50%, 0); "></div>
+                        <h3 style="clear:both; color: #fff; position: absolute; top: 310px; text-align: center; width: 100%; margin-left:-15px;">@films[i].Name</h3>
                     }
 
                 </div>
