--- a/KINO/KINO/Views/Home/Film.cshtml
+++ b/KINO/KINO/Views/Home/Film.cshtml
@@ -7,10 +7,10 @@
 <div class="content">
     <div class="film-container container">
         <div class="row">
-            <div class="col-lg-4" style="float: left;">
+            <div class="col-lg-4" style="float: left; ">
                 @{ 
                     string image = "/Content/Images/Posters/" + ViewBag.Film.Poster;
-                    <div class="poster-image-large" style="background-image:url(@image);">
+                    <div class="poster-image-large" style="background-image:url(@image); margin-top:25px;">
                         </div>
                  }
             </div>
@@ -28,7 +28,7 @@
         {
             <hr />
             <div class="row">
-                <p><a class="btn btn-default col-md-2" href="/Manage/SessionManage">Добавить сеанс</a></p>
+                <p><a class="btn btn-default col-md-2" style="margin-left:10px;" href="/Manage/SessionManage">Добавить сеанс</a></p>
             </div>
 
         }
