--- a/KINO/KINO/Views/Manage/SessionManage.cshtml
+++ b/KINO/KINO/Views/Manage/SessionManage.cshtml
@@ -14,7 +14,7 @@
             <div class="form-group">
                 @Html.LabelFor(m => m.Session.SessionTime, new { @class = "col-md-2 control-label" })
                 <div class="col-md-10">
-                    @Html.TextBoxFor(m => m.Session.SessionTime.Date, new { @class = "form-control" })
+                    @Html.TextBoxFor(m => m.Session.SessionTime, new { @class = "form-control" })
                 </div>
             </div>
             <div class="form-group">
