Стрелочка для возврата, немного измененное слайдшоу

--- a/KINO/KINO/Views/Home/HallsSlideshow.cshtml
+++ b/KINO/KINO/Views/Home/HallsSlideshow.cshtml
@@ -2,7 +2,7 @@
 
 <div id="slideshow">
     <div class="slide-arrow-left" onclick="SlideDown();">
-        <i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
+        <i class="fa fa-chevron-left" aria-hidden="true"></i>
     </div>
     @foreach (KINO.Models.Hall hall in Model)
     {
@@ -20,7 +20,7 @@
         </div>
                 }
     <div class="slide-arrow-right" onclick="SlideUp();">
-        <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+        <i class="fa fa-chevron-right" aria-hidden="true"></i>
     </div>
 </div>
 
