--- a/KINO/KINO/Content/Site.css
+++ b/KINO/KINO/Content/Site.css
@@ -17,6 +17,51 @@ body {
     min-height: 100vh;
 }
 
+
+.up-button {
+    text-align: center;
+    width: 100px;
+    background: rgba(255, 255, 255, 0.2);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    padding-top: 80px;
+    color: #fff;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 1;
+    transition: opacity 0.2s ease-in-out;
+}
+.up-button-hidden{
+    opacity: 0 !important;
+}
+.up-button-mobile{
+    display: none;
+}
+@media (max-width: 960px){
+    .up-button{
+        display: none;
+    }
+    .up-button-mobile {
+        display: block;
+        text-align: center;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        position: fixed;
+        bottom: 20px;
+        left: 20px;
+        color: #000;
+        background: #fff;
+        font-size: 20px;
+        cursor: pointer;
+        opacity: 1;
+        padding-top: 10px;
+        transition: opacity 0.2s ease-in-out;
+        z-index: 10001;
+    }
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
@@ -158,6 +203,7 @@ footer .container{
     transform: translate(-50%, -50%);
     background: rgba(0, 0, 0, 0.7);
     z-index: 101;
+    max-width: 95%;
 }
 .form-control {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
