--- a/KINO/KINO/Views/Shared/_Layout.cshtml
+++ b/KINO/KINO/Views/Shared/_Layout.cshtml
@@ -15,6 +15,8 @@
 
 </head>
 <body>
+    <div class="up-button-mobile up-button-hidden" onclick="onUpButtonClick()"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
+    <div class="up-button up-button-hidden" onclick="onUpButtonClick()"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
