--- a/KINO/KINO/Views/Manage/Index.cshtml
+++ b/KINO/KINO/Views/Manage/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model KINO.Models.IndexViewModel
+@using KINO.Helpers
 @{
     ViewBag.Title = "Управление";
 }
@@ -8,7 +9,7 @@
 <p class="text-success">@ViewBag.StatusMessage</p>
 @if (@HttpContext.Current.User.IsInRole("User"))
 {
-    <div>
+    @*<div>
         <h4>История заказов</h4>
         <hr />
         @if (ViewBag.History != null)
@@ -39,8 +40,46 @@
         {
             <p>Здесь будет отображаться история ваших заказов.</p>
         }
-    </div>
+    </div>*@
+    @*@Html.TextBox("searchPattern")
+        <input type="submit" value="Поиск" />*@
+            
+    using(Ajax.BeginForm("Index", "Manage", new AjaxOptions { UpdateTargetId = "results" }))
+    {
+        <div id="results">
+            <table class="table table-hover table-striped">
+                <thead>
+                    <tr>
+                        <th>Дата и время заказа</th>
+                        <th>Дата и время сеанса</th>
+                        <th>Название фильма</th>
+                        <th>Название зала</th>
+                        <th>Стоимость заказа</th>
+                        <th>Количество билетов</th>
+                    </tr>
+                </thead>
+                @foreach (KINO.Models.UserOrdersHistory history in ViewBag.History)
+                {
+                    <tr>
+                        @foreach (var prop in history.GetType().GetProperties())
+                        {
+                            <td>@prop.GetValue(history)</td>
+                        }
+                    </tr>
+                }
+
+            </table>
+
+            <div class="btn-group">
+                @Html.PageLinks(Model.PageInfo, x => Url.Action("Index", new { page = x }))
+            </div>
+        </div>
+    }
+
+    @Scripts.Render("~/scripts/jquery-1.10.2.min.js")
+    @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.min.js")
 }
+
 
 <div>
     <h4>Изменение параметров учетной записи</h4>
