--- a/KINO/KINO/Views/Manage/Index.cshtml
+++ b/KINO/KINO/Views/Manage/Index.cshtml
@@ -8,8 +8,7 @@
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 @if (@HttpContext.Current.User.IsInRole("User"))
-{    @*@Html.TextBox("searchPattern")
-        <input type="submit" value="Поиск" />*@
+{  
    <div>
         <h4>История заказов</h4>
         <hr />
@@ -17,6 +16,11 @@
         {
             using (Ajax.BeginForm("Index", "Manage", new AjaxOptions { UpdateTargetId = "results" }))
             {
+              <div class="btn-group-sm" style="float:right">
+                  Поиск:
+                <input type="text" name="search" />
+                <input type="submit" class="btn btn-default" style="margin-bottom:6px; margin-top:3px" value="Найти" />
+              </div>
         <div id="results">
             <table class="table table-hover table-striped">
                 <thead>
@@ -29,6 +33,7 @@
                         <th>Количество билетов</th>
                     </tr>
                 </thead>
+                <tbody>
                 @foreach (KINO.Models.UserOrdersHistory history in ViewBag.History)
                 {
                     <tr>
@@ -38,7 +43,8 @@
                         }
                     </tr>
                 }
-
+                    </tbody>
+                
             </table>
             @if(Model.PageInfo.TotalPages > 1)
             {
