--- a/KINO/KINO/Views/Manage/FilmManage.cshtml
+++ b/KINO/KINO/Views/Manage/FilmManage.cshtml
@@ -14,6 +14,7 @@
         <div class="container">
         <div class="row">
             <div class="col-md-6" style="float:left;">
+                @Html.ValidationSummary("", new { @class = "text-danger" })
             <div class="form-group">
             @Html.LabelFor(m => m.Film.Name, new { @class = "col-md-4 control-label" })
             <div class="col-md-8">
@@ -35,7 +36,7 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Film.ReleaseYear, new { @class = "col-md-4 control-label" })
-            <div class="col-md-8">
+            <div class="col-md-8" >
                 @Html.TextBoxFor(m => m.Film.ReleaseYear, new { @class = "form-control" })
             </div>
         </div>
@@ -69,8 +70,9 @@
                 @Html.TextBoxFor(m => m.UploadedFile, new { type = "file", onchange = "SetNewEntry(this.files);" })
             </div>
         </div>
+                @Html.HiddenFor(m => m.Film.LINK)
         <div class="form-group">
-            <div class="col-md-offset-3 col-md-9">
+            <div class="col-md-offset-4 col-md-8">
                 @if (Model.Film == null)
                 {
                     <input type="submit" class="btn btn-default" value="Добавить" />
@@ -98,31 +100,3 @@
   </div>
     }
 </div>
-
-
-<!--<div>
-    using (Html.BeginForm("ContentManage", "Manage", FormMethod.Post, new { class = "form-horizontal", role = "form" }))
-    {
-        <h4>А немного сессий?</h4>
-        <hr />
-        <div class="form-group">
-            //Html.LabelFor(m => m.Session.FilmLINK, "Фильм", new { class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                Html.DropDownListFor(m => m.Session.FilmLINK, ViewBag.Films as SelectList, new { class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            Html.LabelFor(m => m.Session.HallLINK, "Зал", new { class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                Html.DropDownListFor(m => m.Session.HallLINK, ViewBag.Halls as SelectList, new { class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            Html.LabelFor(m => m.Session.SessionTime, "Дата и время", new { class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                Html.TextBoxFor(m => m.Session.SessionTime, new { class = "form-control" })
-            </div>
-        </div>
-
-    }
-</div>-->
