--- a/KINO/KINO/Views/Manage/SessionManage.cshtml
+++ b/KINO/KINO/Views/Manage/SessionManage.cshtml
@@ -3,40 +3,43 @@
     ViewBag.Title = "Редактирование сеансов";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css">
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />*@
-
-
 <h2>@ViewBag.Title.</h2>
 <div>
     @using (Html.BeginForm("SessionManage", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
     {
         <h4>Добавление сеанса.</h4>
         <hr />
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(m => m.Session.SessionTime, new { @class = "col-md-2 control-label" })
                 <div class="col-md-10">
                     @Html.TextBoxFor(m => m.Session.SessionTime, new { @class = "form-control" })
                 </div>
-            </div>
-            @*<div class="form-group">
-                <!-- элемент input с id = datetimepicker1 -->
-                <div class="input-group" id="datetimepicker1">
-                    <input type="text" class="form-control" />
-                    <span class="input-group-addon" style="float:left;">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                </div>
+            </div>*@
+        @Html.HiddenFor(m => m.Session.LINK, new { });
+            <div class="form-group">
+
+                @Html.LabelFor(m => m.Session.SessionTime, new { @class = "col-md-2 control-label" })
+                <div class="col-md-10">
+                    <div class="input-group" id="datetimepicker1">
+                        <input type="text" class="form-control" name="date_field" />
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-calendar"></span>
+                        </span>
+                    </div>
+                    </div>
             </div>
 
-            <!-- Инициализация виджета "Bootstrap datetimepicker" -->
             <script>
                 $(function () {
-                    // идентификатор элемента (например: #datetimepicker1), для которого необходимо инициализировать виджет Bootstrap DateTimePicker
-                    $('#datetimepicker1').datetimepicker();
+                    $('#datetimepicker1').datetimepicker({
+                        locale: 'ru'
+                        @{
+                            string dateString = Model.Session.SessionTime.ToShortDateString() + " " + Model.Session.SessionTime.ToShortTimeString();
+                         }
+                    });
+                    $('#datetimepicker1').data("DateTimePicker").date('@dateString');
                 });
-            </script>*@
+            </script>
             <div class="form-group">
                 @Html.LabelFor(m => m.Session.FilmLINK, new { @class = "col-md-2 control-label" })
                 <div class="col-md-10">
@@ -71,6 +74,7 @@
     
                 }
 </div>
+
 
 @Scripts.Render("~/Scripts/jquery-3.2.1.js")
 @Scripts.Render("~/Scripts/moment-with-locales.js")
