--- a/KINO/KINO/Views/Manage/SessionManage.cshtml
+++ b/KINO/KINO/Views/Manage/SessionManage.cshtml
@@ -33,31 +33,36 @@
                     @Html.HiddenFor(m => m.Session.FilmLINK)
                 </div>
             </div>
-        } 
-            <div class="form-group">
-                @Html.LabelFor(m => m.Session.SessionTime, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(m => m.Session.SessionTime, new { @class = "form-control" })
-                </div>
-            </div>
-            @*<div class="form-group">
-                <!-- элемент input с id = datetimepicker1 -->
+        }
+        <div class="form-group">
+
+            @Html.LabelFor(m => m.Session.SessionTime, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
                 <div class="input-group" id="datetimepicker1">
-                    <input type="text" class="form-control" />
-                    <span class="input-group-addon" style="float:left;">
+                    <input type="text" class="form-control" name="date_field" />
+                    <span class="input-group-addon">
                         <span class="glyphicon glyphicon-calendar"></span>
                     </span>
                 </div>
             </div>
+        </div>
 
-            <!-- Инициализация виджета "Bootstrap datetimepicker" -->
             <script>
                 $(function () {
-                    // идентификатор элемента (например: #datetimepicker1), для которого необходимо инициализировать виджет Bootstrap DateTimePicker
-                    $('#datetimepicker1').datetimepicker();
+                    $('#datetimepicker1').datetimepicker({
+                        locale: 'ru'
+
+                    });
+                    @{ 
+                        string dateString = "";
+                    }
+                    @if (Model.Session != null) {
+                        dateString = Model.Session.SessionTime.ToShortDateString() + " " + Model.Session.SessionTime.ToShortTimeString();
+
+                    }
+                    $('#datetimepicker1').data("DateTimePicker").date('@dateString');
                 });
-            </script>*@
-    
+            </script>
             <div class="form-group">
                 @Html.LabelFor(m => m.Session.HallLINK, new { @class = "col-md-2 control-label" })
                 <div class="col-md-10">
