--- a/KINO/KINO/Views/Home/Film.cshtml
+++ b/KINO/KINO/Views/Home/Film.cshtml
@@ -28,7 +28,7 @@
         {
             <hr />
             <div class="row">
-                <p><a class="btn btn-default col-md-2" style="margin-left:10px;" href="/Manage/SessionManage">Добавить сеанс</a></p>
+                <p><a class="btn btn-default col-md-2" style="margin-left:10px;" href="/Manage/SessionManage?film=@ViewBag.Film.LINK">Добавить сеанс</a></p>
             </div>
 
         }
