--- a/KINO/KINO/Views/Manage/SessionManage.cshtml
+++ b/KINO/KINO/Views/Manage/SessionManage.cshtml
@@ -15,17 +15,39 @@
         <h4>Добавление сеанса.</h4>
         <hr />
         @Html.ValidationSummary("", new { @class = "text-danger" })
-        if (Model.Session == null || Model.Session.FilmLINK == null)
+        if (Model.Session == null)
         {
-            <div class="form-group">
+            if (ViewBag.film != null)
+            {
+                <div class="form-group">
                 @Html.LabelFor(m => m.Session.FilmLINK, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.DropDownListFor(m => m.Session.FilmLINK, ViewBag.Films as SelectList, new { @class = "form-control" })
+                <div class="col-md-10" style="margin-top: 8px">
+                    @*Html.DisplayFor(m => m.Session.Film.Name, new { @class = "form-control" })*@
+                    @{
+                        string filmName = ViewBag.FilmName.ToString();
+                        int film = ViewBag.film;
+                    }
+                    @filmName
+                    @Html.HiddenFor(m => m.Session.FilmLINK, new { })
+                    <script>
+                        $("#Session_FilmLINK").attr("value", @film);
+                    </script>
                 </div>
             </div>
-        }
-        else
-        {
+             }
+                        else
+                        {
+                            <div class="form-group">
+                                @Html.LabelFor(m => m.Session.FilmLINK, new { @class = "col-md-2 control-label" })
+                                <div class="col-md-10">
+                                    @Html.DropDownListFor(m => m.Session.FilmLINK, ViewBag.Films as SelectList, new { @class = "form-control" })
+                                </div>
+                            </div>
+                            }
+
+                        }
+                        else
+                        {
             <div class="form-group">
                 @Html.LabelFor(m => m.Session.FilmLINK, new { @class = "col-md-2 control-label" })
                 <div class="col-md-10" style="margin-top: 8px">
@@ -33,7 +55,9 @@
                     @Html.HiddenFor(m => m.Session.FilmLINK)
                 </div>
             </div>
+
         }
+
         <div class="form-group">
 
             @Html.LabelFor(m => m.Session.SessionTime, new { @class = "col-md-2 control-label" })
@@ -58,7 +82,9 @@
                     }
                     @if (Model.Session != null) {
                         dateString = Model.Session.SessionTime.ToShortDateString() + " " + Model.Session.SessionTime.ToShortTimeString();
-
+                    }
+                    else {
+                        dateString = DateTime.Now.ToShortDateString() + " " + DateTime.Now.ToShortTimeString();
                     }
                     $('#datetimepicker1').data("DateTimePicker").date('@dateString');
                 });
@@ -75,7 +101,10 @@
                     @Html.TextBoxFor(m => m.Session.Cost, new { @class = "form-control" })
                 </div>
             </div>
-            @Html.HiddenFor(m => m.Session.LINK)
+                        if (Model.Session != null)
+                        {
+                            Html.HiddenFor(m => m.Session.LINK);
+                        }
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     @if (Model.Session == null)
